2014-11-11  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditorPreview.x3dv:
	* X3DColorPerVertexEditorInterface.h:
	* ColorPerVertexEditor.h:
	* X3DColorPerVertexEditorInterface.cpp:
	* ColorPerVertexEditor.cpp: 

2014-11-10  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditorPreview.x3dv:
	* ColorPerVertexEditor.h:
	* ColorPerVertexEditor.cpp: 

2014-11-10  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditorPreview.x3dv:
	* ColorPerVertexEditor.h:
	* ColorPerVertexEditor.cpp: 

2014-11-10  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.cpp: 

2014-11-10  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.h:
	* ColorPerVertexEditor.cpp: 

2014-11-10  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DColorPerVertexEditorInterface.h:
	* ColorPerVertexEditor.h:
	* X3DColorPerVertexEditorInterface.cpp:
	* ColorPerVertexEditor.cpp: 

2014-11-10  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.xml:
	* Checkerboard.svg:
	* ColorPerVertexEditorPreview.x3dv:
	* X3DColorPerVertexEditorInterface.h:
	* ColorPerVertexEditor.h:
	* X3DColorPerVertexEditorInterface.cpp:
	* ColorPerVertexEditor.cpp: 

2014-11-10  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.cpp: 

2014-11-10  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DColorPerVertexEditorInterface.h:
	* ColorPerVertexEditor.h:
	* X3DColorPerVertexEditorInterface.cpp:
	* ColorPerVertexEditor.cpp:
	* X3DPrecisionPlacementPanelInterface.cpp: 

2014-11-09  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DColorPerVertexEditorInterface.h:
	* X3DColorPerVertexEditorInterface.cpp: 

2014-11-09  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.h:
	* ColorPerVertexEditor.cpp: 

2014-11-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Arrow.svg:
	* Select.svg:
	* BrowserWindow.xml:
	* X3DBrowserWindowInterface.h:
	* X3DColorPerVertexEditorInterface.h:
	* ColorPerVertexEditor.h:
	* X3DColorPerVertexEditorInterface.cpp: